# jarvis

./: .gitignore  .markdownlint.json  README.md  config.yaml  instructuons.md  pyproject.toml  requirements.txt
desktop/: jarvis-tray.desktop
jarvis/: __main__.py  app.py  audio.py  barge_in.py  capabilities.py  cli.py  commands.py  config.py  config_model.py  desktop_apps.py  executor.py  llm_llamacpp.py  llm_ollama.py  logging_setup.py  mic_tools.py  monitor.py  paths.py  presets.py  status.py  storage.py  stt_faster_whisper.py  text_normalize_ru.py  tray_app.py  tray_app_system.py  tts_piper.py  tts_worker.py  ui_window.py  wakeword_vosk.py  yaml_config.py
jarvis/skills/: base.py  builtin_commands.py  memory.py  open_notes_weather.py  reminders.py  router.py  system_controls.py  text.py  timer_time.py  todo.py  verbosity_status.py
scripts/: download_models.sh  download_whisper_model.py  install.sh  list_audio_devices.py  monitor.sh  pull_llm_model.sh  pull_llm_models.sh  run.sh  setup_ubuntu.sh
systemd/: jarvis.service
systemd/user/: jarvis-tray.service  jarvis.service  ollama.service
